# cpu_bench

./: .gitignore  LICENSE  README.md  run_v_0_0_1.py
configs/: benchmarks_index.yaml
scripts/: clean_artifacts.py  run_cpu.py  run_cpu_env.py  run_cpu_perf.py  run_v_0_0_1.py  setup_env.py
src/languages/c/c_compiler_benchmark/: generate_data.py  metadata.yaml  run_benchmark.py
src/languages/c/ffmpeg_benchmark/: generate_data.py  metadata.yaml  run_benchmark.py  setup.sh
src/languages/c/lapack_benchmark/: Makefile  generate_data.py  lapack_benchmark.c  metadata.yaml  setup.sh
src/languages/c/openssl_benchmark/: build.sh  generate_data.py  metadata.yaml  openssl_benchmark.c  setup.sh
src/languages/c/redis_benchmark/: README.md  metadata.yaml  run_benchmark.py  setup.sh
src/languages/c/zstd_benchmark/: generate_data.py  metadata.yaml  run_benchmark.py  setup.sh
src/languages/cpp/opencv_benchmark/: CMakeLists.txt  README.md  metadata.yaml  setup.sh
src/languages/cpp/opencv_benchmark/src/: cpu_benchmark.cpp  data_manager.cpp  data_manager.hpp  main.cpp  workloads.cpp  workloads.hpp
src/languages/cpp/rocksdb_benchmark/: metadata.yaml  run_benchmark.py  setup.sh
src/languages/go/biogo/: README.md  go.mod  go.sum  metadata.yaml  setup.sh
src/languages/go/biogo/biogo-examples/krishna/: krishna.go  packseqs.go
src/languages/go/biogo/src/: igor.go  krishna.go
src/languages/go/bleve-index/: go.mod  metadata.yaml  setup.sh
src/languages/go/bleve-index/src/: main.go  words.go
src/languages/go/cockroachdb/: go.mod  go.sum  metadata.yaml  setup.sh
src/languages/go/cockroachdb/src/: kv.go  main.go  tpcc.go
src/languages/go/esbuild/: generate_data.py  go.mod  main.go  metadata.yaml  setup.sh
src/languages/go/esbuild/scripts/: generate_data.sh
src/languages/go/esbuild/src/: main.go
src/languages/go/garbage/: garbage.go  generate_data.py  go.mod  metadata.yaml
src/languages/go/garbage/scripts/: generate_data.py
src/languages/go/garbage/src/: garbage.go
src/languages/go/go_benchmark/: download_go.sh
src/languages/go/go_compiler_benchmark/: download_go.sh  generate_data.py  metadata.yaml  run_benchmark.py
src/languages/go/golang_benchmark/: go.mod
src/languages/go/golang_benchmark/garbage/: garbage.go
src/languages/go/gopher-lua/: go.mod  metadata.yaml
src/languages/go/gopher-lua/src/: main.go
src/languages/go/gopher_lua/: metadata.yaml  setup.sh
src/languages/go/gopher_lua/scripts/: generate_data.py
src/languages/go/gopher_lua/src/: knucleotide.lua  main.go
src/languages/go/json/: metadata.yaml
src/languages/go/json/scripts/: generate_data.py
src/languages/go/json/src/: json.go
src/languages/go/markdown/: generate_data.py  go.mod  main.go  metadata.yaml  setup.sh
src/languages/go/markdown/scripts/: generate_data.py
src/languages/go/markdown/src/: main.go
src/languages/go/tile38-sim/: go.mod  metadata.yaml
src/languages/go/tile38-sim/src/: main.go
src/languages/go/tile38_sim/: metadata.yaml  setup.sh
src/languages/go/tile38_sim/src/: main.go
src/languages/java/cassandra/: metadata.yaml  run_benchmark.py  setup.sh
src/languages/java/guava_benchmark/: metadata.yaml
src/languages/java/guava_benchmark/benchmarks/: BenchmarkRunner.java  GuavaCPUBenchmark.java
src/languages/java/guava_benchmark/benchmarks/framework/: BenchmarkContext.java  Workload.java
src/languages/java/guava_benchmark/benchmarks/utils/: DataGenerator.java
src/languages/java/guava_benchmark/benchmarks/workloads/: BloomFilterWorkload.java  EventAggregationWorkload.java  GraphTraversalWorkload.java  GuavaWorkloads.java  ImmutableSnapshotWorkload.java  (+1 more)
src/languages/java/guava_benchmark/scripts/: config.sh  run_benchmark.sh  setup.sh
src/languages/java/kafka_benchmark/: metadata.yaml  run_benchmark.py  setup.sh
src/languages/java/smile_benchmark/: generate_data.py  metadata.yaml  pom.xml  run_benchmark.py  setup.py
src/languages/java/smile_benchmark/src/: KMeansBenchmark.java
src/languages/python/bert/: bert_eval.py  bert_jit.py  generate_data.py  metadata.yaml
src/languages/python/chaos_fractal/: chaosgame_core.py  generate_data.py  metadata.yaml  run_benchmark.py
src/languages/python/deltablue/: metadata.yaml  run_benchmark.py
src/languages/python/dlrm/: generate_data.py  metadata.yaml  requirements.txt  run_benchmark.py
src/languages/python/go_board_game/: metadata.yaml  run_benchmark.py
src/languages/python/numpy_benchmark/: README.md  metadata.yaml
src/languages/python/numpy_benchmark/benchmarks/: data_manager.py  workloads.py
src/languages/python/numpy_benchmark/data/: fft_2048_float64.npz
src/languages/python/numpy_benchmark/scripts/: generate_data.py  run_benchmark.py
src/languages/python/pyflate/: generate_data.py  metadata.yaml  run_benchmark.py
src/languages/python/raytrace/: metadata.yaml  run_benchmark.py
src/languages/python/requests_benchmark/: metadata.yaml
src/languages/python/requests_benchmark/benchmarks/: client.py  data_manager.py  local_file_adapter.py
src/languages/python/requests_benchmark/scripts/: generate_data.py  run_benchmark.py
src/languages/python/resnet50/: generate_data.py  metadata.yaml  resnet_eval.py  resnet_train.py
src/languages/python/transformer_inference/: generate_data.py  metadata.yaml  run_benchmark.py
src/languages/python/transformer_train/: generate_data.py  metadata.yaml  run_benchmark.py  setup.py
src/languages/python/tuf_benchmark/: generate_data.py  metadata.yaml  run_benchmark.py
test/: lab.py  merge_lab1.py  merge_res.py  test.py
test/log/: generated_params_2025-11-06_13-11-06.json  generated_params_2025-11-07_15-56-34.json
(+1 files in other folders)
